# PassMan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/passman/: cli.py  config.py  db.py  password_generator.py  security.py
