[project]
name = "PassMan"
version = "0.1.0"
description = "Secure password manager cli app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.3.0",
    "tabulate==0.9.0",
    "pyperclip==1.11.0",
    "sqlcipher3-wheels==0.5.5.post0",
    "cryptography>=46.0.3",
]

[project.scripts]
passman = "passman.cli:cli"
